EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Category__c.field-meta.xml
<CustomField>
    <fullName>hed__Category__c</fullName>
    <description>Indicates the type of Plan Requirement, for example, optional or required.</description>
    <inlineHelpText>Indica el tipo de requisito de plan, como por ejemplo, obligatorio u opcional.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>