EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Credits__c.field-meta.xml
<CustomField>
    <fullName>hed__Credits__c</fullName>
    <description>The number of credits a student receives for satisfying this requirement.</description>
    <inlineHelpText>El número de créditos que recibe un estudiante al satisfacer este requisito.</inlineHelpText>
    <label>Credits</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>