EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Plan_Requirement__c.field-meta.xml
<CustomField>
    <fullName>hed__Plan_Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the Plan Requirement is one of multiple requirements or multiple levels of requirements, specifies the parent Plan Requirement. Use this field to group a list of optional Courses that satisfy a generic requirement.</description>
    <inlineHelpText>Si el requisito de plan es uno de los múltiples requisitos o múltiples niveles de requisitos, especifica el requisito del plan principal. Utilice este campo para agrupar una lista de cursos opcionales que satisfacen un requisito genérico.</inlineHelpText>
    <label>Parent Plan Requirement</label>
    <referenceTo>hed__Plan_Requirement__c</referenceTo>
    <relationshipLabel>Plan Requirements</relationshipLabel>
    <relationshipName>Plan_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>