EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Program_Plan__c.field-meta.xml
<CustomField>
    <fullName>hed__Program_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Program Plan this requirement is for. If you&apos;re grouping Plan Requirements together under a Parent Plan Requirement, best practice is to link only the top-level Plan Requirement to a Program Plan.</description>
    <inlineHelpText>El plan del programa para el que es este requisito. Si está agrupando requisitos de planes juntos bajo un requisito del plan principal, la mejor práctica es vincular únicamente el requisito del plan de nivel superior con un plan de programa.</inlineHelpText>
    <label>Program Plan</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Plan Requirements</relationshipLabel>
    <relationshipName>Plan_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>