EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Plan_Requirement__c/fields/hed__Sequence__c.field-meta.xml
<CustomField>
    <fullName>hed__Sequence__c</fullName>
    <description>This requirement&apos;s place in the Program Plan, for example, &quot;1&quot; indicates the first semester. Use this field to indicate the overall progression for the entire Program Plan, or to sort the order of sub-requirements within a single parent Plan Requirement.</description>
    <inlineHelpText>El lugar de este requisito en el plan del programa; por ejemplo, &quot;1&quot; indica el primer semestre. Utilice este campo para indicar la progresión general del plan del programa completo, o para ordenar los requisitos secundarios dentro de un Requisito del plan principal único.</inlineHelpText>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>